change graph format to tree

--- a/graph.html
+++ b/graph.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Force-Directed Graph</title>
+    <title>Tidy Tree Graph</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <style>
@@ -17,21 +17,27 @@
     </style>
 </head>
 <body>
-    <h1>Force-Directed Graph</h1>
+    <h1>Tidy Tree Graph</h1>
     <div id="graph"></div>
 
     <script type="module">
         import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
 
         // Load the graph data from a JSON file
-        d3.json('schema_graph.json').then(graphData => {
-            const graph = ForceGraph(graphData, {
-                nodeId: d => d.id,
-                nodeGroup: d => d.group, // Optional: grouping nodes
-                nodeTitle: d => `Node ${d.id}`,
-                linkStrokeWidth: l => Math.sqrt(l.value), // Optional: width based on link value
-                width: 1000,
-                height: 800
+        // d3.json('new_schema_graph.json').then(graphData => {
+        //     const graph = ForceGraph(graphData, {
+        //         nodeId: d => d.id,
+        //         nodeGroup: d => d.group, // Optional: grouping nodes
+        //         nodeTitle: d => `${d.data["name"]}`,
+        //         linkStrokeWidth: l => Math.sqrt(l.value), // Optional: width based on link value
+        //         width: 1000,
+        //         height: 800
+        //     });
+        d3.json('schema_tree_graph.json').then(graphData => {
+            const graph = Tree(graphData, {
+                label: d => d.name,
+                title: (d, n) => `${d.name}`, // hover text
+                width: 3000,
             });
 
             // Append the graph to the DOM
@@ -43,6 +49,6 @@
         // Append the graph to the DOM
         document.getElementById("graph").appendChild(graph);
     </script>
-<script type="text/javascript" src="force_graph.js"></script>
+<script type="text/javascript" src="tree_graph.js"></script>
 </body>
 </html>
